force-app/main/default/objects/SCOC__InformationList__c/SCOC__InformationList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Information List</description>
    <label>Information</label>
    <nameField>
        <displayFormat>INFOL-{00000}</displayFormat>
        <label>Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>