force-app/main/default/objects/SCOC__InformationList__c/fields/SCOC__Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Code__c</fullName>
    <description>Information list code.</description>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>