force-app/main/default/objects/SCOC__InformationList__c/fields/SCOC__Text__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Text__c</fullName>
    <description>Information list text.</description>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>